--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
+    "dist-compress:css": "node-sass css/style.prefix.css dist/css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css dist-compress:css",
+    "concat:js": "mkdir -p dist/js && concat -o dist/js/scripts.js js/luxy.js js/scripts.js js/tagcanvas.js js/scripts.js",
+    "uglify": "uglifyjs -o dist/js/scripts.min.js dist/js/scripts.js",
+    "imagemin": "imagemin --out-dir=dist/img img/**/*.{png,jpg,gif}",
+    "build:js": "npm run concat:js && npm run uglify",
+    "build:img": "npm run imagemin",
+    "build": "npm run build:css && npm run build:js && npm run build:img"
   },
   "author": "Alexey Leonov",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^7.1.4",
     "concat": "^1.0.3",
+    "imagemin-cli": "^4.0.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.1",
-    "postcss-cli": "^6.1.2"
+    "postcss-cli": "^6.1.2",
+    "uglify-js": "^3.6.0"
   },
   "dependencies": {
     "smooth-scrollbar": "^8.4.0"
